cluster/parked/tandoor/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tandoor-ingress
  namespace: tandoor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tandoor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: authentik
              app.kubernetes.io/component: server
      ports:
        - port: 80
          protocol: TCP
